drm/evdi: Force restore mode setting when connection is established

When userspace application is disconnecting from evdi device then
it forgets used mode. However from drm point of view
mode has not changed. When application reconnects the
crtc mode_set function is not called so application is not notified
about current mode.

Invoking drm_helper_resume_force_mode will trigger evdi_crtc_mode_set
which will effect in proper configuration.

BUG=chromium:643223
TEST=Build and tested on link

Change-Id: I9f67937402bf758aca4157892667035af15e36b4
Signed-off-by: Lukasz Spintzyk <lukasz.spintzyk@displaylink.com>
Reviewed-on: https://chromium-review.googlesource.com/378916
Commit-Ready: Bernie Thompson <bhthompson@chromium.org>
Tested-by: Łukasz Spintzyk <lukasz.spintzyk@displaylink.com>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Dawid Kurek <dawid.kurek@displaylink.com>
Reviewed-by: Łukasz Spintzyk <lukasz.spintzyk@displaylink.com>