drivers/gpu/drm/evdi/evdi_painter.c
@@ -445,6 +445,10 @@ evdi_painter_connect(struct evdi_device *evdi,
 
 	drm_helper_hpd_irq_event(evdi->ddev);
 
+	drm_modeset_lock_all(evdi->ddev);
+	drm_helper_resume_force_mode(evdi->ddev);
+	drm_modeset_unlock_all(evdi->ddev);
+
 	return 0;
 }
 
